--- a/redistricting_iw.ipynb
+++ b/redistricting_iw.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2c3d2cff",
+   "id": "4ec18dc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "790f0f00",
+   "id": "8eec449a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf13d0c7",
+   "id": "a48165b4",
    "metadata": {},
    "source": [
     "## Upload proposed maps"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bf6d8fb",
+   "id": "0b9e02ad",
    "metadata": {},
    "source": [
     "## Add actual wins and EGs to state data"
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cdf3f131",
+   "id": "31092070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a11031",
+   "id": "ae3eb009",
+   "metadata": {},
+   "source": [
+    "### Code for threading adapted from: https://realpython.com/intro-to-python-threading/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aedea169",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format = \"%(asctime)s: %(message)s\"\n",
+    "logging.basicConfig(format=format, level=logging.INFO,\n",
+    "                    datefmt=\"%H:%M:%S\")\n",
+    "\n",
+    "threads = list()\n",
+    "for state in states:\n",
+    "    logging.info(\"Main    : create and start thread %d.\", state)\n",
+    "    x = threading.Thread(target=run_Markov_chain, args=(state,))\n",
+    "    threads.append(x)\n",
+    "    x.start()\n",
+    "\n",
+    "for index, thread in enumerate(threads):\n",
+    "    logging.info(\"Main    : before joining thread %d.\", states[index])\n",
+    "    thread.join()\n",
+    "    logging.info(\"Main    : thread %d done\", states[index])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d7177e8",
    "metadata": {},
    "source": [
     "## Save results of MCMC"
@@ -576,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a3fddcf",
+   "id": "42b2bc92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb49748e",
+   "id": "2f1284eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 614,
-   "id": "76943dde",
+   "id": "e86b8aa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54293e6e",
+   "id": "9c7b085f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 611,
-   "id": "e8835e05",
+   "id": "fccffbb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb057d0c",
+   "id": "0c56c738",
    "metadata": {},
    "outputs": [],
    "source": [
